<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="5">　　
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/answer_radio_ask"
                style="@style/Answer_listView_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:background="@drawable/answer_lv_header_selector"
                android:text="@string/answer_ask" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/answer_radio_share"
                style="@style/Answer_listView_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/answer_lv_header_selector"
                android:text="@string/answer_share" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/answer_radio_total"
                style="@style/Answer_listView_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/answer_lv_header_selector"
                android:text="@string/answer_total" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/answer_radio_occupation"
                style="@style/Answer_listView_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/answer_lv_header_selector"
                android:text="@string/answer_occupation" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/answer_radio_office"
                style="@style/Answer_listView_Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_lv_header_selector"
                android:text="@string/answer_office" />
        </FrameLayout>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cac5c5" />
<!--    android:textColor="@drawable/answer_lv_header_tvcolor_selector"-->
</LinearLayout>